# isbigger

./: README.md  pyproject.toml  readme.rst  requirements.txt  setup.py
.github/workflows/: python-package.yml
is_bigger/: mlfunctions.py
is_bigger.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
isbigger/: myfunctions.py
tests/: test_functions.py  test_mlfunctions.py  test_myfunctions.py
