[build-system]
requires = [
    "setuptools>=58.0.4"
]
build-backend = "setuptools.build_meta"

[project]
name = "is-bigger"
version = "0.1.1"
description = "Compare two integers like never before"
authors = [
    {name = "ShackledMars261"}
]
readme = "README.md"
requires-python = ">=3.0"
license = {text = "MIT"}
keywords = ["size","comparison","larger","smaller","equal","logic"]
dynamic = ["version", "dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}