[build-system]
requires = [
    "setuptools>=58.0.4"
]
build-backend = "setuptools.build_meta"

[project]
name = "is-bigger"
description = "Compare two integers like never before"
authors = [
    {name = "ShackledMars261"}
]
readme = "README.md"
requires-python = ">=3.0"
license = {text = "MIT"}
keywords = ["size","comparison","larger","smaller","equal","logic"]
dynamic = ["version", "dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[project.urls]
Documentation = "https://github.com/ShackledMars261/isbigger"
"Bug Tracker" = "https://github.com/ShackledMars261/isbigger/issues"