[build-system]
requires = [
    "setuptools>=58.0.4"
]
build-backend = "setuptools.build_meta"

[project]
name = "is-bigger"
description = "A package to compare two integers"
authors = [
    {name = "ShackledMars261"}
]
readme = "README.md"
requires-python = ">=3.0"
license = {text = "MIT"}
keywords = ["size","comparison","larger","smaller","equal","logic"]
dynamic = ["version", "dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[project.urls]
Documentation = "https://github.com/ShackledMars261/isbigger/wiki"
"Bug Tracker" = "https://github.com/ShackledMars261/isbigger/issues"